amora-server (1.2~svn699-1) unstable; urgency=low

  * New upstream snapshot
    - Fixes FTBFS (Closes: #672072)
  * Enabled hardening buildflags

 -- Axel Beckert <abe@debian.org>  Sun, 20 May 2012 00:42:44 +0200

amora-server (1.2~svn697-1) unstable; urgency=low

  * New upstream snapshot
    - Fixes FTBFS with GCC 4.7 (Closes: #667097)
  * Remove transitional package amora-server
  * Bump Standard-Version to 3.9.3 (no changes)
  * Fix Lintian warning debian-rules-missing-recommended-target

 -- Axel Beckert <abe@debian.org>  Sat, 07 Apr 2012 19:44:05 +0200

amora-server (1.2~svn695-2) unstable; urgency=low

  * No more include .la files in the binary packages. (Closes: #621143)

 -- Axel Beckert <abe@debian.org>  Thu, 07 Apr 2011 20:17:46 +0200

amora-server (1.2~svn695-1) unstable; urgency=low

  * New upstream pre-release; provides two binaries, a command-line and a
    Qt4 based system tray interface.
    - Adapted packaging and README.source appropriately
    - Made amora-server a transitional package depending on one of the new
      packages amora-cli and amora-applet.
  * Bumped standards version to 3.9.1, no changes necessary.
  * Move to Debian source package format "3.0 (quilt)"
  * Added a debian/watch file using the http://googlecode.debian.net/
    redirector.
  * Changed (C) into appropriate UTF-8 character to fix lintian warnings
  * Changed the maintainer e-mail address to my debian.org address.
  * Fixed typo in debian/README.source

 -- Axel Beckert <abe@debian.org>  Wed, 04 Aug 2010 02:34:09 +0200

amora-server (1.1-1) unstable; urgency=low

  * Initial release for Debian (Closes: #488587)
  * New upstream release
  * New maintainer for the Debian package
  * Made the package confirming to Debian standards.
  * Based on content of "make dist" tar ball, does not build-depend on
    autoconf and friends anymore, removed appropriate build-deps.
  * Added a README.source
  * Bumped standards version to 3.8.0.
